extra/facs/build/ce.txt
../gui/panes/CompensationPane.cpp: In member function ‘void CompensationPane::updateForm()’:
../gui/panes/CompensationPane.cpp:49:22: error: invalid use of incomplete type ‘class Compensation’
  for(QString s : comp->cnames() )
                      ^
In file included from ../gui/panes/CompensationPane.cpp:8:0:
../gui/FacsanaduProject.h:27:7: note: forward declaration of ‘class Compensation’
 class Compensation;
       ^
../gui/panes/CompensationPane.cpp:57:35: error: invalid use of incomplete type ‘class Compensation’
  tableMatrix_->setColumnCount(comp->getSize());
                                   ^
In file included from ../gui/panes/CompensationPane.cpp:8:0:
../gui/FacsanaduProject.h:27:7: note: forward declaration of ‘class Compensation’
 class Compensation;
       ^
../gui/panes/CompensationPane.cpp:58:32: error: invalid use of incomplete type ‘class Compensation’
  tableMatrix_->setRowCount(comp->getSize());
                                ^
In file included from ../gui/panes/CompensationPane.cpp:8:0:
../gui/FacsanaduProject.h:27:7: note: forward declaration of ‘class Compensation’
 class Compensation;
       ^
../gui/panes/CompensationPane.cpp:62:27: error: invalid use of incomplete type ‘class Compensation’
  for(int row=0; row < comp->getSize(); row++)
                           ^
In file included from ../gui/panes/CompensationPane.cpp:8:0:
../gui/FacsanaduProject.h:27:7: note: forward declaration of ‘class Compensation’
 class Compensation;
       ^
../gui/panes/CompensationPane.cpp:64:27: error: invalid use of incomplete type ‘class Compensation’
   for(int col=0; col< comp->getSize(); col++)
                           ^
In file included from ../gui/panes/CompensationPane.cpp:8:0:
../gui/FacsanaduProject.h:27:7: note: forward declaration of ‘class Compensation’
 class Compensation;
       ^
../gui/panes/CompensationPane.cpp:66:58: error: request for member ‘get’ in ‘comp’, which is of pointer type ‘Compensation*’ (maybe you meant to use ‘->’ ?)
    QTableWidgetItem* it = new QTableWidgetItem("" + comp.get(row,col));
                                                          ^
../gui/panes/CompensationPane.cpp:74:2: error: ‘updating’ was not declared in this scope
  updating = false;
  ^
../gui/panes/CompensationPane.cpp: In member function ‘void CompensationPane::dataChanged(QTableWidgetItem*)’:
../gui/panes/CompensationPane.cpp:80:6: error: ‘updating’ was not declared in this scope
  if(!updating)
      ^
../gui/panes/CompensationPane.cpp: At global scope:
../gui/panes/CompensationPane.cpp:78:54: warning: unused parameter ‘it’ [-Wunused-parameter]
 void CompensationPane::dataChanged(QTableWidgetItem* it)
                                                      ^
make: *** [build/objects/CompensationPane.o] Error 1
